# go

./: BUILD  README.md  WORKSPACE  bazel-bin  bazel-go  bazel-out  bazel-testlogs  go.mod  go.sum  go_third_party.bzl
bazel/docker/: def.bzl  repos.bzl
bazel/go/gazelle/go_link/: proto_gen.go
protos/common/: BUILD.bazel  common.proto
protos/hello/: BUILD.bazel  hello.proto  hello_service.proto
services/hello/: BUILD.bazel  main.go
services/hello/server/: BUILD.bazel  server.go  server_test.go
